--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiger Hunt</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/prefabs/tiger.js"></script>
+    <script src="./src/scenes/menu.js"></script>
+    <script src="./src/scenes/play.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
