--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Tiger Hunt</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/tiger.js"></script>
+    <script src="./src/prefabs/hunter.js"></script>
     <script src="./src/scenes/menu.js"></script>
     <script src="./src/scenes/play.js"></script>
+    <script src="./src/scenes/gameOver.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
