--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./src/scenes/menu.js"></script>
     <script src="./src/scenes/play.js"></script>
     <script src="./src/scenes/gameOver.js"></script>
+    <script src="./src/scenes/credits.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
